# CORE

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .envrc  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  PYTHON_PACKAGE.md  README.md  asan_suppressions.txt  clang-tidy-check.json  conanfile.py  docker-compose.yml  flake.nix  lsan_suppressions.txt  main.py  out.txt  pyproject.toml  requirements.txt  setup.py  tsan_suppressions.txt  tsan_supressions.txt  valgrind_suppressions.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yaml  checks-new.yaml  checks.yaml  docker-checks.yaml  docker-push.yaml  pypi-publish.yaml  sanitizer-wheels.yaml  test-checks.yaml  unit-test-checks.yaml  unit_test.yaml  upload-conan.yaml  valgrind-checks.yaml
cmake/: FindGMP.cmake
conan_profiles/: aarch64-linux  aarch64-linux-gcc-libstdc  aarch64-macos  aarch64-macos-clang-libc  x86_64-linux  x86_64-linux-address  x86_64-linux-clang  x86_64-linux-clang-libc  x86_64-linux-clang-libstdc  x86_64-linux-gcc  x86_64-linux-gcc-libstdc  x86_64-linux-thread
core_server_py/: .gitignore  pyproject.toml
core_server_py/core_server_py/: __init__.py  __main__.py  app.py  engine.py
docs/: Database.md
docs/developers/: README.md
docs/developers/diagrams/: Architecture.drawio
docs/users/: INSTALLATION.md  Installation.md  README.md
experiments/stock/: q1.txt  q10.txt  q11.txt  q12.txt  q13.txt  q14.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt  q9.txt  s3.query
experiments/stock/original/: TimeAndSales_AMAT_210019836.txt  TimeAndSales_CSCO_210019836.txt  TimeAndSales_DELL_210019836.txt  TimeAndSales_INTC_210019836.txt  TimeAndSales_IPIX_210019836.txt  TimeAndSales_MSFT_210019836.txt  TimeAndSales_ORCL_210019836.txt  TimeAndSales_QQQ_210019836.txt  TimeAndSales_RIMM_210019836.txt  TimeAndSales_YHOO_210019836.txt
logs/: .gitignore
python/: main.py
python/pycore/: README.md  __init__.py  pycore.py
python/pycore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_streamer/: .gitignore  abstract_streamer.py  abstract_streamer_offline.py  abstract_streamer_websocket.py  main.py  pyproject.toml  read.py  test.txt  test2.py  ticker.txt
python_streamer/bluesky/: create_post.py  create_post_offline.py
python_streamer/bluesky/models/: commit.py
python_streamer/coinbase/: main.py  ticker.py  ticker.txt  ticker_offline.py
python_streamer/coinbase/models/: ticker.py
scripts/: all.sh  build.sh  build_and_test.sh  build_and_test_smart_homes_queries.sh  build_and_test_stock_queries.sh  build_and_test_stock_queries_unordered.sh  build_and_test_taxi_queries.sh  build_and_valgrind.sh  build_grammar.sh  build_pycer.sh  clang_format_all_files.sh  clang_tidy_check_all_files.sh  common.sh  compile_and_test.sh  compile_script.sh  create_package.sh  create_text_editor_metadata.sh  generate_antlr.py  initial_build.sh  install_dependencies.sh  run_and_compare.sh  run_single_query_and_check.sh  setup_in_ubuntu.sh  update_empty_directory_placeholders.sh
scripts/benchmark_queries/: build_and_benchmark_smart_homes_queries.sh  build_and_benchmark_stock_queries.sh  build_and_benchmark_stock_queries_unordered.sh  build_and_benchmark_taxi_queries.sh
scripts/queries/base_queries/: build_and_test_bluesky_ordered.sh  build_and_test_bluesky_unordered.sh  build_and_test_smart_homes_queries.sh  build_and_test_stock_queries.sh  build_and_test_stock_queries_unordered.sh  build_and_test_taxi_queries.sh
scripts/queries/benchmark_queries/: benchmark_runner.sh  build_and_benchmark_bluesky_ordered.sh  build_and_benchmark_bluesky_unordered.sh  build_and_benchmark_smart_homes_queries.sh  build_and_benchmark_stock_queries.sh  build_and_benchmark_stock_queries_unordered.sh  build_and_benchmark_taxi_queries.sh
src/core_client/: client.hpp  client_config.hpp  message_handler.hpp
src/core_server/backend/: Backend.cpp  Backend.hpp  BackendImpl.hpp  BackendInterface.hpp  QueryImpl.hpp  QueryInterface.hpp  SingleQuery.cpp  SingleQuery.hpp
src/core_streamer/: streamer.hpp
src/pybind/: .clang-tidy  python_binding.cpp
src/shared/catalog/: event_type_id.hpp  schema.hpp
src/shared/datatypes/: bitset.hpp  client_request.hpp  client_request_type.hpp  complex_event.hpp  custom_bitset.hpp  enumerator.hpp  event.hpp  eventWrapper.hpp  event_type.hpp  server_response.hpp  server_response_type.hpp  stream.hpp  value.hpp
src/shared/exceptions/: event_not_in_stream_exception.hpp  parsing_syntax_exception.hpp  stream_name_already_declared_exception.hpp  stream_not_found_exception.hpp
src/shared/logging/: setup.cpp  setup.hpp
src/shared/message_receiver/: message_receiver.hpp  zmq_message_receiver.hpp
src/shared/message_sender/: message_sender.hpp  zmq_message_sender.hpp
src/shared/networking/: client_request_codec.hpp  framed_message.hpp  stream_message_codec.hpp
src/shared/serializer/: cereal_serializer.hpp  serializer.hpp
src/targets/: client.cpp  main.cpp  offlinesimulation2.cpp  server.cpp  simulation1.cpp  simulation2.cpp
src/targets/experiments/: data_handler.hpp
src/targets/offline/: offline.cpp  simulation1.cpp  simulation2.cpp
src/targets/online/: client-experiment.cpp  client.cpp  server-experiment.cpp  server.cpp  simulation1.cpp  simulation2.cpp  streamer.cpp
src/targets/polkura_example/: polkura.cpp  polkura_data.hpp
src/targets/stocks_example/: offline_stocks_example.cpp  stocks_data.hpp  (+1 more)
src/tests/: .clang-tidy
tests/benchmark/: benchmark_queries.py
tests/e2e/: conftest.py  csv_parser.py  online_runner.py  test_queries.py
vcpkg-triplets/: x64-linux-clang-libcxx.cmake  x64-linux-clang-libstdcxx.cmake  x64-linux-gcc-libstdcxx.cmake
vcpkg-triplets/toolchains/: clang-libcxx.cmake  clang-libstdcxx.cmake  gcc-libstdcxx.cmake
vcpkg_toolchains/: arm64-linux-gcc-libstdcxx.cmake  arm64-osx-clang-libcxx.cmake  x64-linux-clang-libstdcxx.cmake  x64-linux-gcc-libstdcxx.cmake
vcpkg_triplets/: arm64-linux-gcc-libstdcxx.cmake  arm64-osx-clang-libcxx.cmake  x64-linux-clang-libstdcxx.cmake  x64-linux-gcc-libstdcxx.cmake
(+664 files in other folders)
