[project]
name = "python-streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiolimiter>=1.2.1",
    "async-lru>=2.0.5",
    "pydantic>=2.11.7",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]

[tool.uv]
package = false
